--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/HP/alx-low_level_programming/0x13-more_singly_linked_lists",
-      "program": "c:/Users/HP/alx-low_level_programming/0x13-more_singly_linked_lists/build/Debug/outDebug",
+      "cwd": "d:/ALX/alx-low_level_programming/0x1A-hash_tables",
+      "program": "d:/ALX/alx-low_level_programming/0x1A-hash_tables/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
